# YARC-Launcher

./: .env  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml
public/fonts/ArchivoBlack/: archivoBlack.css
public/fonts/BigShouldersText/: bigShouldersText.css
public/fonts/Inter/: inter.css
src/: App.tsx  index.html  main.js  main.tsx  query.ts  settings.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  setlist_decrypt.rs  types.rs  utils.rs
src-tauri/src/app_profile/: mod.rs  official_setlist.rs  yarg.rs
src/assets/Icons/: index.ts
src/components/Box/: Box.module.css  index.tsx
src/components/Button/: Button.module.css  index.tsx
src/components/ChangelogSection/: ChangelogSection.module.css  index.tsx
src/components/DropdownButton/: DropdownButton.module.css  index.tsx
src/components/GenericBox/: index.tsx
src/components/InputBox/: InputBox.module.css  index.tsx
src/components/LaunchButton/: LaunchButton.module.css  index.tsx
src/components/LaunchPage/: index.tsx  styles.module.css
src/components/LoadingScreen/: LoadingScreen.module.css  index.tsx
src/components/MainButton/: index.tsx  mainbutton.module.css
src/components/NewsSection/: NewsSection.module.css  index.tsx
src/components/Onboarding/: Onboarding.module.css  Sidebar.tsx  StepIndicator.tsx  index.tsx
src/components/PayloadProgress/: index.tsx
src/components/ProfileIcon/: ProfileIcon.module.css  index.tsx
src/components/QueueDownload/: Setlist.tsx  YARG.tsx  base.tsx
src/components/SanitizedHTML/: index.tsx
src/components/ScreenshotSection/: index.tsx
src/components/Setlist/: SongEntry.module.css  SongEntry.tsx  SortChanger.module.css  SortChanger.tsx  index.tsx
src/components/Sidebar/: Sidebar.module.css  SidebarMenuButton.tsx  index.tsx
src/components/TitleBar/: TitleBar.module.css  index.tsx  titlebar.module.css
src/components/TooltipWrapper/: TooltipWrapper.module.css  index.tsx
src/components/Updater/: index.tsx
src/dialogs/: DialogProvider.module.css  DialogProvider.tsx  dialogUtil.ts  index.ts
src/dialogs/Dialogs/: BaseDialog.module.css  BaseDialog.tsx  ChangeDownloadLocationDialog.tsx  ErrorDialog.module.css  ErrorDialog.tsx  InstallFolder.module.css  InstallFolderDialog.module.css  InstallFolderDialog.tsx  LeavingLauncherDialog.tsx  MsvcDialog.tsx  OfflineDialog.tsx  OldVersionDialog.tsx  TryCloseDialog.tsx  UninstallBeforeRemoveDialog.tsx
src/hooks/: useMarketIndex.ts  useNews.ts  useNewsArticle.ts  useNewsAuthor.ts  useNightlyReleases.ts  useOfflineStatus.ts  useProfileState.ts  useReleases.ts  useSetlistData.ts  useSetlistRelease.ts  useYARGRelease.ts  useYARGVersion.ts
src/profiles/: actions.ts  directories.ts  marketplace.ts  store.ts  types.ts  utils.ts
src/routes/: index.tsx  root.tsx
src/routes/AppProfile/: AppProfile.module.css  AppSettings.module.css  AppSettings.tsx  LaunchButton.tsx  MoreDropdown.module.css  MoreDropdown.tsx  index.tsx
src/routes/ErrorScreen/: ErrorScreen.module.css  index.tsx
src/routes/Home/: Home.module.css  home.module.css  index.tsx
src/routes/Marketplace/: Marketplace.module.css  MarketplacePopup.module.css  MarketplacePopup.tsx  MarketplaceProfileView.tsx  MarketplaceSection.tsx  index.tsx
src/routes/News/: index.tsx
src/routes/NewsPage/: NewsPage.module.css  index.tsx
src/routes/Queue/: Queue.module.css  index.tsx
src/routes/Setlist/: Official.tsx  SortChanger.module.css  SortChanger.tsx  index.tsx  setlist.module.css
src/routes/Settings/: Settings.module.css  index.tsx
src/routes/YARG/: NewEngine.tsx  Nightly.tsx  Stable.tsx
src/stores/: DownloadStore.ts  Profile.ts  ProfileStore.ts  ProfileTypes.ts  SetlistStateStore.ts  YARGStateStore.ts
src/tasks/: index.ts  payload.ts  provider.tsx  queue.ts
src/tasks/Processors/: DownloadAndInstall.tsx  DownloadAndInstallTask.tsx  Setlist.tsx  UninstallTask.tsx  YARG.tsx  base.ts
src/utils/: checkMsvc.ts  consts.ts  graphicsApi.ts  localized.ts  os.ts  safeUrl.ts  timeFormat.ts
(+67 files in other folders)
