[package]
name = "yet_another_launcher"
version = "0.3.2"
description = "The YARC (Yet Another Rhythm Company) launcher."
authors = ["YARC Team"]
license = "YARG License"
repository = "https://github.com/YARC-Official/YARC-Launcher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
log = "^0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri = { version = "1.5.2", features = [ "process-relaunch", "shell-open",
    "fs-read-file",
    "fs-read-dir",
    "fs-create-dir",
    "fs-write-file",
    "path-all",
    "updater",
    "config-json5",
    "os-all",
    "dialog-all",
    "window-close",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.19"
reqwest = { version = "0.12.4", features = ["stream"] }
futures-util = "0.3.28"
zip-extract = "0.1.3"
directories = "5.0.1"
sevenz-rust = { version = "0.6.0", features = ["aes256"] }
window-shadows = "0.2.2"
minisign = "0.7.6"
opener = { version = "0.7.1", features = ["reveal"] }
async-trait = "0.1.74"
clap = { version = "4.5.13", features = ["derive"] }
lazy_static = "1.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
