[package]
name = "yet_another_launcher"
version = "1.2.0"
description = "The YARC (Yet Another Rhythm Company) launcher."
authors = ["YARC Team"]
license = "YARG License"
repository = "https://github.com/YARC-Official/YARC-Launcher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "^0.4"
tauri-plugin-log = { version = "2" }
tauri = { version = "2", features = [
    "config-json5"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.19"
reqwest = { version = "0.12.4", features = ["stream"] }
futures-util = "0.3.28"
zip-extract = "0.1.3"
directories = "5.0.1"
sevenz-rust = { version = "0.6.0", features = ["aes256"] }
minisign = "0.7.6"
opener = { version = "0.7.1", features = ["reveal"] }
async-trait = "0.1.74"
clap = { version = "4.5.13", features = ["derive"] }
lazy_static = "1.5.0"
online = "4.0.2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tempfile = "3.10.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = ["Win32_System_LibraryLoader"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
